sync more file admin

--- a/dpex/assets/index.html
+++ b/dpex/assets/index.html
@@ -1,22 +1,11 @@
-{{define "Q"}}
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
-    <link rel="stylesheet " href="/assets/grid.css ">
-    <link rel="stylesheet " href="/assets/nav.css ">
-
-    <title>FDP Landing page</title>
-
-
-<script type="appplication/ld+json">
-{{.}}
-</script>
-
-
+    <link rel="stylesheet " href="css/grid.css ">
+    <link rel="stylesheet " href="css/nav.css ">
+    <title>P418 Garden: FDP at LP</title>
 </head>
-
 <body>
     <div class="grid ">
         <div class="title ">
@@ -25,36 +14,36 @@
                     <a href="/" class="navLinks">Home</a>
                 </div>
                 <div class="m2">
-                    <a href="/html/about.html" class="navLinks">About</a>
+
                 </div>
                 <div class="logo">
                 </div>
                 <div class="m3">
-                    <a target="_blank" href="https://github.com/earthcubearchitecture-project418" class="navLinks">GitHub</a>
+
                 </div>
                 <div class="m4">
-                    <a target="_blank" href="/voc/" class="navLinks">Vocabularies</a>
+
                 </div>
             </nav>
         </div>
-        <div class="header">FDP2LP landing page:  RESID</div>
+        <div class="header">Frictionless to Landing Page demo</div>
         <div class="sidebar">
 
-         This is a simple test of reading schema.org items inside a frictionless data package and 
-         using that to generate this landing page.  
+            This is a simple program to demonstrate generating a landing page that is formed from the contents of a frictionless data
+            page.
 
         </div>
         <div class="content">
             <p style="margin-top:20px">
 
                 <p style="margin-top:20px">
-                    Landing page template
-                    </p>
-               
-                <p style="margin-top:20px">
-                   Use web components to display elements on the LP generated from the schema.org JSON-LD
+                    Examples
                 </p>
-               
+
+                <p style="margin-top:20px">
+                    <a href="./pkg/TEST">Simple test package: ID:TEST</a>
+                </p>
+
             </p>
 
 
@@ -64,6 +53,4 @@
         </div>
     </div>
 </body>
-
 </html>
-{{end}}
